src/test/ui/rfc-2497-if-let-chains/syntax-ambiguity-2015.stderr
error: ambiguous use of `&&`
  --> $DIR/syntax-ambiguity-2015.rs:10:47
   |
LL |     if let Range { start: _, end: _ } = true..true && false { }
   |                                               ^^^^^^^^^^^^^ help: consider adding parentheses: `(true && false)`
   |
   = note: this will be a error until the `let_chains` feature is stabilized
   = note: see rust-lang/rust#53668 for more information

error: ambiguous use of `||`
  --> $DIR/syntax-ambiguity-2015.rs:13:47
   |
LL |     if let Range { start: _, end: _ } = true..true || false { }
   |                                               ^^^^^^^^^^^^^ help: consider adding parentheses: `(true || false)`
   |
   = note: this will be a error until the `let_chains` feature is stabilized
   = note: see rust-lang/rust#53668 for more information

error: ambiguous use of `&&`
  --> $DIR/syntax-ambiguity-2015.rs:16:50
   |
LL |     while let Range { start: _, end: _ } = true..true && false { }
   |                                                  ^^^^^^^^^^^^^ help: consider adding parentheses: `(true && false)`
   |
   = note: this will be a error until the `let_chains` feature is stabilized
   = note: see rust-lang/rust#53668 for more information

error: ambiguous use of `||`
  --> $DIR/syntax-ambiguity-2015.rs:19:50
   |
LL |     while let Range { start: _, end: _ } = true..true || false { }
   |                                                  ^^^^^^^^^^^^^ help: consider adding parentheses: `(true || false)`
   |
   = note: this will be a error until the `let_chains` feature is stabilized
   = note: see rust-lang/rust#53668 for more information

error: ambiguous use of `&&`
  --> $DIR/syntax-ambiguity-2015.rs:22:19
   |
LL |     if let true = false && false { }
   |                   ^^^^^^^^^^^^^^ help: consider adding parentheses: `(false && false)`
   |
   = note: this will be a error until the `let_chains` feature is stabilized
   = note: see rust-lang/rust#53668 for more information

error: ambiguous use of `&&`
  --> $DIR/syntax-ambiguity-2015.rs:25:22
   |
LL |     while let true = (1 == 2) && false { }
   |                      ^^^^^^^^^^^^^^^^^ help: consider adding parentheses: `((1 == 2) && false)`
   |
   = note: this will be a error until the `let_chains` feature is stabilized
   = note: see rust-lang/rust#53668 for more information

error: aborting due to 6 previous errors

